# vibecore

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  PLAN.md  README.md  RELEASE.md  SUB_AGENT_SUPPORT_PLAN.md  pyproject.toml
.claude/: settings.json
.claude/agents/: tui-test-engineer.md
.github/workflows/: ci.yml  claude-code-review.yml  claude-dispatch.yml  claude.yml  publish.yml
.hooks/: code_quality_check.py
docs/: TOOL_MESSAGE_CREATION_GUIDE.md  runner_migration.md
examples/: basic.py  basic_cli.py  customer_service.py  feedback_demo.py  parallel_research.py  sub_agent_demo.py  sub_agent_mock.py  sub_agent_simple.py
examples/research_bot/: manager.py
src/vibecore/: __init__.py  cli.py  context.py  flow.py  main.py  main.tcss  settings.py
src/vibecore/agents/: default.py  prompts.py  task.py  task_agent.py
src/vibecore/auth/: README.md  __init__.py  config.py  interceptor.py  manager.py  models.py  oauth_flow.py  pkce.py  storage.py  token_manager.py
src/vibecore/handlers/: __init__.py  stream_handler.py  sub_agent_stream_handler.py
src/vibecore/mcp/: __init__.py  manager.py  server_wrapper.py
src/vibecore/models/: __init__.py  anthropic.py  anthropic_auth.py
src/vibecore/prompts/: common_system_prompt.txt
src/vibecore/session/: __init__.py  file_lock.py  jsonl_session.py  loader.py  path_utils.py
src/vibecore/tools/: __init__.py  base.py  path_validator.py
src/vibecore/tools/file/: __init__.py  executor.py  tools.py  utils.py
src/vibecore/tools/python/: __init__.py  helpers.py  manager.py  tools.py
src/vibecore/tools/python/backends/: __init__.py  terminal_backend.py
src/vibecore/tools/shell/: __init__.py  executor.py  tools.py
src/vibecore/tools/task/: __init__.py  executor.py  tools.py
src/vibecore/tools/todo/: __init__.py  manager.py  models.py  tools.py
src/vibecore/tools/web/: __init__.py  executor.py  tools.py
src/vibecore/tools/webfetch/: __init__.py  executor.py  models.py  tools.py
src/vibecore/tools/websearch/: __init__.py  base.py  executor.py  models.py  tools.py
src/vibecore/tools/websearch/ddgs/: __init__.py  backend.py
src/vibecore/utils/: __init__.py  text.py
src/vibecore/widgets/: core.py  core.tcss  expandable.py  expandable.tcss  feedback.py  feedback.tcss  info.py  info.tcss  messages.py  messages.tcss  tool_message_factory.py  tool_messages.py  tool_messages.tcss
tests/: README.md  README_message_tests.md  __init__.py  message_test_harness.py  test_anthropic_model.py  test_cli.py  test_flow.py  test_harness.py  test_jsonl_format.py  test_keyboard_interactions.py  test_mcp_manager.py  test_message_snapshots.py  test_path_validator.py  test_python_execution.py  test_python_tool_integration.py  test_server_wrapper.py  test_session_history_loading.py  test_shell_tools.py  test_tool_message_factory.py  test_web_search.py  test_widget_snapshots.py
tests/_harness/: message_test_harness.py  test_harness.py
tests/auth/: test_pkce.py
tests/cli/: test_clear_command.py  test_cli.py
tests/fixtures/sessions/: basic_conversation.jsonl  tool_usage_bash.jsonl  tool_usage_python.jsonl  tool_usage_read.jsonl  tool_usage_todo.jsonl
tests/session/: test_jsonl_format.py  test_jsonl_session.py  test_session_history_loading.py
tests/tools/: test_file_tools.py  test_python_tool_integration.py  test_shell_tools.py  test_todo_tools.py
tests/ui/: test_feedback_widget.py  test_keyboard_interactions.py  test_mcp_json_prettification.py  test_mcp_tool_message.py  test_message_snapshots.py  test_tool_message_factory.py  test_widget_snapshots.py
